--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#6977c5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="mainBG">#363636</color>
+    <color name="mainTxtClr">#0c2137</color>
+    <color name="positiveColor">#008000</color>
+    <color name="negativeColor">#B22222</color>
+    <color name="popup">#474747</color>
+
+    <!-- Button Colors -->
+    <color name="green_temp">#0099ff</color>
+    <color name="grey_dark">#a6a6a6</color>
+    <color name="bright_green">#bb2c5c6c</color>
+    <color name="button_green">#0a7497</color>
 </resources>
